# pr210

./: .gitignore  CMakeLists.txt  ps_default.hlsl  shadercompiler.bat  shaderstructs.hlsl  vs_default.hlsl
PR210/: CMakeLists.txt  PR210.cpp  PR210.h
engine.client/: AppWindow.cpp  AppWindow.h  CMakeLists.txt  camera.h  client.cpp  client.h  d3d11renderer.cpp  d3d11renderer.h  main.cpp  mesh.cpp  mesh.h  types.h  vertex.h
engine.client/CPP/: application.cpp  applicationWindow.cpp  d3d11renderer.cpp  main.cpp
engine.client/Header/: application.h  applicationWindow.h  d3d11renderer.h
engine.shared/: CMakeLists.txt  color.h  mat4x4.cpp  mat4x4.h  mathutils.h  quaternion.h  transform.h  vec2.h  vec3.cpp  vec3.h
engine.shared/CPP/: matrix4x4.cpp  mesh.cpp  quaternion.cpp  vec2.cpp  vec3.cpp
engine.shared/Header/: camera.h  color.h  mathUtils.h  matrix4x4.h  mesh.h  quaternion.h  stb_image.h  transform.h  types.h  utils.h  vec2.h  vec3.h  vertex.h
res/: RCa13128  cameraStruct.hlsl  resources.rc  shadercompiler.bat  structures.hlsl  vertexStructs.hlsl
res/ps/: pixelDefault.hlsl  textureDefault.hlsl
res/vs/: vertexDefault.hlsl  vertexPhong.hlsl
